crates/zhuye-cli/src/tui_core/pager_overlay/snapshots/zhuye_cli__tui_core__pager_overlay__tests__transcript_overlay_snapshot_basic.snap
---
source: crates/reflect-tui/src/tui_core/pager_overlay.rs
expression: term.backend()
---
"/ T R A N S C R I P T / / / / / / / / / "
"alpha                                   "
"                                        "
"beta                                    "
"                                        "
"gamma                                   "
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q to quit   esc to edit prev           "
"                                        "
